<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.organiseapp.ActivityLogTask">

    <EditText
        android:id="@+id/new_task_title"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Task Title"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_task_description"
        android:layout_width="403dp"
        android:layout_height="172dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Task Description"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_title" />

    <EditText
        android:id="@+id/due_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="Due Date"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/task_detail_due_date"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/new_task_description"
        app:layout_constraintRight_toLeftOf="@+id/date_button"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_marginBottom="53dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/save_task_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="393dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:duplicateParentState="false"
        android:text="@string/task_priority_box"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/due_date"
        app:layout_constraintVertical_bias="0.714" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/launch_calendar_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_description" />

</android.support.constraint.ConstraintLayout>
